fix: [InputFile] add flex wrap for chips

--- a/src/components/atoms/InputFile/InputFile.scss
+++ b/src/components/atoms/InputFile/InputFile.scss
@@ -25,6 +25,7 @@
 
 .rf-file-input__chip-wrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .rf-file-input__chip {
